--- a/requirements.txt
+++ b/requirements.txt
@@ -1,87 +1,5 @@
-annotated-types==0.7.0
-anyio==4.4.0
-Babel==2.15.0
-beautifulsoup4==4.13.5
-bracex==2.6
-certifi==2024.6.2
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-contourpy==1.3.3
-csscompressor==0.9.5
-cycler==0.12.1
-distro==1.9.0
-EditorConfig==0.17.1
-fastapi==0.115.12
-fonttools==4.60.1
-ghp-import==2.1.0
-gitdb==4.0.11
-GitPython==3.1.43
-h11==0.14.0
-htmlmin2==0.1.13
-httpcore==1.0.5
-httpx==0.27.0
-idna==3.7
-Jinja2==3.1.4
-jsbeautifier==1.15.4
-jsmin==3.0.1
-kiwisolver==1.4.9
-lxml==6.0.2
-Markdown==3.6
-MarkupSafe==2.1.5
-matplotlib==3.10.7
-mergedeep==1.3.4
-mkdocs==1.6.0
-mkdocs-awesome-pages-plugin==2.10.1
-mkdocs-get-deps==0.2.0
-mkdocs-git-revision-date-localized-plugin==1.2.5
-mkdocs-glightbox==0.4.0
-mkdocs-macros-plugin==1.0.5
-mkdocs-material==9.5.38
-mkdocs-material-extensions==1.3.1
-mkdocs-mermaid2-plugin==1.2.2
-mkdocs-minify-plugin==0.8.0
-natsort==8.4.0
-notion-client==2.7.0
-numpy==2.3.3
-openai==1.35.3
-packaging==24.1
-paginate==0.5.6
-pandas==2.3.3
-pathspec==0.12.1
-patsy==1.0.1
-pillow==11.3.0
-platformdirs==4.2.2
-pydantic==2.7.4
-pydantic_core==2.18.4
-Pygments==2.18.0
-pymdown-extensions==10.8.1
-pyparsing==3.2.5
-PyPDF2==3.0.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.2.1
-python-pptx==1.0.2
-pytz==2024.1
-PyYAML==6.0.1
-pyyaml_env_tag==0.1
-regex==2024.5.15
-requests==2.32.3
-scikit-posthocs==0.11.4
-scipy==1.16.2
-seaborn==0.13.2
-setuptools==80.9.0
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.1
-soupsieve==2.8
-starlette==0.46.1
-statsmodels==0.14.5
-termcolor==2.4.0
-tqdm==4.66.4
-typing_extensions==4.12.2
-tzdata==2025.2
-urllib3==2.2.2
-uvicorn==0.34.0
-watchdog==4.0.1
-wcmatch==10.1
-xlsxwriter==3.2.9
+dash==2.18.2
+pandas==2.2.3
+plotly==5.24.1
+numpy==2.2.1
+gunicorn==23.0.0
